--- a/kask.config
+++ b/kask.config
@@ -1,1 +1,1 @@
-{"current_tasks_list":"default_tasks","tasks_lists_paths":{"default_tasks":"default_tasks.csv"}}
+{"current_tasks_list":"default_tasks","tasks_lists_paths":{"otherTask":".","default_tasks":"default_tasks.csv","school_other":".","school":".","something":".","testTaskList":"/home/kyperbelt/development/rust/kask"}}
