--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.33"
 clap = { version = "4.4.18", features = ["derive"] }
+prettytable-rs = "0.10.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 strsim = "0.11.0"
